--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>this is second number</h2>
     <h4> this is not change</h4>
     <h5>this is also changed</h5>
+    <img src="download.jpg" alt="">
 </body>
 </html>
